# astdiff

./: .gitignore  CLAUDE.md  Cargo.toml  DIFF.md  LICENSE  README.md  benchmark.sh  profile.sh  spec.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: missing_identifiers_analysis.org
examples/: complex.js  destructure_test.js  identifier_test_comprehensive.js  identifier_test_simple.js  mapping_demo.js  minified.js  missing_simple.js  missing_test.js  nested.js  scope_demo.js  simple.js  stability_test1.js  stability_test2.js  stability_test3.js  test.map  test_mapping.js
spec/: comprehensive-dump-format.md
src/: debug_tree.rs  dump.rs  lib.rs  main.rs
src/canonicalizer/: mod.rs
src/cli/: mod.rs
src/diff/: fingerprint.rs  matching_report.rs  mod.rs  parallel_matching.rs  parallel_matching_v2.rs  profiling.rs  threshold_learning.rs
src/mapping/: mod.rs
src/parser/: mod.rs
src/pretty/: mod.rs
src/scope/: mod.rs
