[package]
name = "varmap"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "JavaScript Variable Mapping and Canonicalization Tool"
license = "MIT"

[dependencies]
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
