[package]
name = "astdiff"
version = "0.2.0"
edition = "2021"
authors = ["astdiff contributors"]
description = "High-performance AST-based structural diff tool for JavaScript"
repository = "https://github.com/yourusername/astdiff"
homepage = "https://github.com/yourusername/astdiff"
readme = "README.md"
keywords = ["diff", "ast", "javascript", "minified", "structural"]
categories = ["command-line-utilities", "development-tools", "parsing"]
license = "MIT"

[[bin]]
name = "astdiff"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.20"
tree-sitter-javascript = "0.20"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.8"
lazy_static = "1.4"
bincode = "1.3"
zstd = "0.13"
sha2 = "0.10"
chrono = "0.4"
similar = "2.4"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"
